--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build_and_push_to_repo:
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
-    - 'which upx || ( apt update -q && apt install -y upx-ucl )'
+    # - 'which upx || ( apt update -q && apt install -y upx-ucl )'
   script:
     - export LATESTGO="$(curl -sk https://go.dev/dl/|grep -oP '\/dl\/\K[a-zA-Z0-9\.]+linux-amd64.tar.gz'|head -1)"
     - test -n "${LATESTGO}" && curl -skL https://go.dev/dl/${LATESTGO} -o ${LATESTGO} && rm -rf /usr/local/go && tar -C /usr/local -xzf ${LATESTGO} && rm -f "${LATESTGO}"
@@ -21,8 +21,8 @@ build_and_push_to_repo:
     - echo $CI_COMMIT_SHORT_SHA
     - echo $CI_COMMIT_TAG
     - GOOS='linux' GOARCH='amd64' CGO_ENABLED='0' /usr/local/go/bin/go build -v -ldflags "-s -X main.version=$CI_COMMIT_TAG -X 'main.builddate=$(date +\"%FT%TZ\")' -X 'main.githash=${CI_COMMIT_SHORT_SHA}'" -o ./bin/linux_amd64/ms-prerequisite-check ./cmd/cli
-    - ls -lah ./bin/linux_amd64/ms-prerequisite-check
-    - upx -q --best ./bin/linux_amd64/ms-prerequisite-check
+    # - ls -lah ./bin/linux_amd64/ms-prerequisite-check
+    # - upx -q --best ./bin/linux_amd64/ms-prerequisite-check
     - ls -lah ./bin/linux_amd64/ms-prerequisite-check
     - rsync -avze 'ssh -p27434 -A -o StrictHostKeyChecking=no' bin/linux_amd64/ms-prerequisite-check root@repo.metalsoft.io:/home/repo/data/extra/ms-prerequisite-check
   only:
